boxes arround the formulas are removed

--- a/functions.tex
+++ b/functions.tex
@@ -94,7 +94,7 @@
         \ifthenelse{\equal{#3}{\empty}}
         {}
         {\label{#3}}%anstatt equation	
-        \boxed{\begin{split}#1\end{split}}
+        \begin{split}#1\end{split}
         %\begin{split}#1\end{split}
     \end{equation} %anstatt equation
 }
