--- a/glossary.tex
+++ b/glossary.tex
@@ -41,3 +41,5 @@
 % stationäres Signal
 \newglossaryentry{g:stationaer}{name=stationär, description={Ein Signal wird als stationär bezeichnet, wenn seine Signalkenngrössen nicht abhängig von der Zeit sind}}
 \newglossaryentry{g:gradientenvefahren}{name=Gradientenvefahren, description={Verfahren bei Optimierungen. Dabei wird der  angenäherter Wert stets in die Richtung des negativen Gradienten korrigiert (Methode des steilsten Abstieges)}}
+\newglossaryentry{g:sagital}{name=sagital,description={Bewegung in der Sagitalebene, vorne nach hinten umgekehrt}}
+\newglossaryentry{g:transversal}{name=transversal,description={Bewegung in der Transversalebene, rechts nach links umgekehrt}}
