add section protocoll translation and other stuff

--- a/report.tex
+++ b/report.tex
@@ -325,13 +325,19 @@
 \input{appendix/aufgabenstellung/aufgabenstellung}
 %
 %Anhang C
-\input{appendix/cd/cd}
+\input{appendix/messung/messung}
 %
 %Anhang D
 \input{appendix/DAQ_MATLAB/DAQ_MATLAB}
 %
-%Anhang D
+%Anhang E
 %\input{appendix/datasheet/datasheet}
+%
+%Anhang F
+\input{appendix/cd/cd}
+
+%
+
 %
 %
 \end{document}
