--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -88,7 +88,7 @@ Um die Orientierung des Sensors zu kompensieren, ist zum Überblick in Abbildung 
         \quad \quad
         \begin{subfigure}[htbp]{0.3\textwidth}
                 \includegraphics[width=\textwidth]{content/3_konzept/image/koordinatensystem_myRIO}
-                \caption{Koordinatensystem myRIO 1900}
+                \caption{Koordinatensystem \gls{g:myrio}}
                 \label{img:koord_myRIO}
         \end{subfigure}        
         \caption{Koordinatensystem}\label{img:koordinatensystem}
@@ -315,7 +315,7 @@ Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt
 			%
 			\begin{itemize}
 				%
-				\item \textbf{Testgruppe} In der Testgruppe werden Beschleunigungsdaten durch das \gls{g:myrio} aufgezeichnet\footnote{siehe Abschnitt \vref{ss:rohdaten_aufzeichnen}} und gespeichert. Im Anschluss zur Messung werden die Daten in \gls{g:matlab} eingelesen und verarbeitet.
+				\item \textbf{Testgruppe} In der Testgruppe werden Beschleunigungsdaten durch das \gls{g:myrio} M\low{1} aufgezeichnet\footnote{siehe Abschnitt \vref{ss:rohdaten_aufzeichnen}} und gespeichert. Im Anschluss zur Messung werden die Daten in \gls{g:matlab} eingelesen und verarbeitet.
 				%
 				\item \textbf{Kontrollgruppe} Die zweite Gruppe repräsentiert die direkte Messung mit Hilfe des Winkelmessers M\low{2}. Sie dient gleichzeitig der Kontrolle für die folgende Interpretation.
 			\end{itemize}
@@ -351,7 +351,7 @@ Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt
 			%
 			Analysiert man die Messabweichung hinsichtlich ihrer Standardabweichung, so ergibt dies für die absoluten Messungen \unit[0.036]{°} und für die relativen \unit[0.0003]{\%}.\par 
 			%
-			Der Rotationswinkel kann zwar für eine Aussage über die Rotation verwendet werden, seine Bedeutung ist jedoch nur zweitrangig wenn die Rotation an sich nicht funktioniert. Daher gilt es die Beschleunigungskomponenten der einzelnen Achsen nach der Rotation auszuwerten. Bei allen Messungen ist der Beschleunigungsvektor $\overrightarrow{a}=\begin{bmatrix}0\\0\\-1\end{bmatrix}$, was dem unbewegten Koordinatensystem des Betrachters entspricht (auf der z-Achse die Erdbeschleunigung).
+			Der Rotationswinkel kann zwar für eine Aussage über die Rotation verwendet werden, seine Bedeutung ist jedoch nur zweitrangig wenn die Rotation an sich nicht funktioniert. Daher gilt es die Beschleunigungskomponenten der einzelnen Achsen nach der Rotation auszuwerten. Bei allen Messungen ist der Beschleunigungsvektor $\overrightarrow{a}=[0\quad 0\quad (-1)]^{\top}$, was dem unbewegten Koordinatensystem des Betrachters entspricht (auf der z-Achse die Erdbeschleunigung).
 			
 	%
 	%
@@ -366,22 +366,38 @@ Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt
 		Die Verifikation der Translation stellt das zweite Experimental-Protokoll dar. Ziel der Messung ist es den kompletten Algorithmus hinsichtlich einer linearen Translation zu überprüfen. Dabei gilt es relevante Fakten wie Genauigkeit und Dynamik zu extrahieren und für die Validierung festzuhalten. Die in der Hypothese \vref{hypo:translation} festgelegten Anforderungen müssen erfüllt werden.
 		%
 		\begin{hypo}\label{hypo:translation}	    	
-			Nach einer linearen Translation um eine bestimmte Distanz \textit{x} misst das Konzept dieselbe. Die Abweichung ist dabei maximal \unit[1]{cm}. Die Position des \gls{g:myrio} hat keinen Einfluss auf das Messergebnis.
+			Nach einer linearen Translation um die Distanz \unit[5]{cm} ist das Ergebnis des Algorithmus dieselbe. Die Abweichung ist dabei maximal $\pm$\unit[1]{cm}\footnote{Die Messgenauigkeit ist im Abschnitt \vref{ss:messgenauigkeit} erläutert}. Die Position des \gls{g:myrio} hat keinen Einfluss auf das Messergebnis.
 		\end{hypo}
 	%
 	%
 	\subsection{Material/Testumgebung}\label{ss:material_translation}
-		Die Messung muss reproduzierbar sein. Deshalb muss eine Testumgebung gewährleistet sein, die für eine Simulation einer geradlinigen Translation geeignet ist. Diese Voraussetzung erfüllt ein Kreuztisch einer Standbohr- / Fräsmaschine. Damit können vorgegebene Pfade präzise in der X/Y-Ebene gefahren werden.\par 
+		Die Messung muss reproduzierbar sein. Deshalb muss eine Testumgebung gewährleistet sein, die für eine Simulation einer geradlinigen Translation geeignet ist. Diese Voraussetzung erfüllt ein Kreuztisch einer Standbohr- / Fräsmaschine oder ein Werkzeugschlitten einer Drehbank. Damit können vorgegebene Pfade präzise in der x-y-Ebene gefahren werden.\par 
 		%
-		Für die Messung wird der Kreuztische der XXX aus der mechanischen Abteilung verwendet. Weiter kommt als zentrale Komponente das \gls{g:myrio} zum Einsatz. Ein vollständige Auflistung aller verwendeten Mittel ist der Tabelle \vref{tab:messmittel_translation} zu entnehmen. Der reale Aufbau der Umgebung entspricht der Abbildung XXX.
+		Für die Messung wird der Werkzeugschlitten der Schaublin-Villeneuve M\low{3} aus der mechanischen Abteilung verwendet (siehe Abbildung \vref{img:drehbank}). Dieser erlaubt es eine kontrollierte Translation in der y-Richtung vorzunehmen. Weiter kommt als zentrale Komponente das \gls{g:myrio} M\low{1} zum Einsatz. Es dient der Aufzeichnung der Beschleunigungsdaten. Die gefahrene Distanz wird mit Hilfe des Massstabs M\low{3} angezeichnet\footnote{Der genau Vorschub kann der Bewegungsanforderung hinsichtlich der Geschwindigkeit nicht gerecht werden} (Abbildung \vref{img:distanz}).\par
+		%
+		\begin{figure}[htbp]
+			\centering
+			\begin{subfigure}[htbp]{0.7\textwidth}
+			      \includegraphics[height=3.5cm]{content/3_konzept/image/testaufbau_translation}
+			      \caption{Drehbank}
+			      \label{img:drehbank}
+			      \vspace*{1.5ex}
+			\end{subfigure}
+			%
+			\begin{subfigure}[htbp]{0.32\textwidth}
+			      \includegraphics[height=3.5cm]{content/3_konzept/image/testaufbau_tran_distanz}
+			      \caption{Translation-Distanz}
+			      \label{img:distanz}
+			\end{subfigure}        
+			\caption{Translation - Testaufbau}
+			\label{img:messaufbau_tran}
+		\end{figure}    
+		%
+		Die Translation wird durch das Drehen des Drehrads ausgelöst. Die zurückgelegte Distanz wird dabei optisch durch den Bediener überprüft (absolute Messung). Ein Setzen von mechanischen Anschläge würde das Messergebnis negativ beeinflussen, weshalb darauf verzichtet wird. Es wird zwischen zwei Translationsgeschwindigkeiten unterschieden, wobei die Geschwindigkeit durch die Bewegungszeit, gemessen mit der Stoppuhr M\low{4}, klassifiziert wird.\par
+		%
+		Das \gls{g:myrio} für die Messungen in unterschiedlichen Positionen am Werkzeugtisch angebracht. Für die Befestigung dient ein Spannblock. Alle zum Einsatz gekommen Messmittel dieses Protokolls sind in der Tabelle \vref{tab:messmittel_translation} aufgelistet. Zudem ist eine geschätzte Genauigkeit angeben, die jedoch hinsichtlich der manuell durchgeführten Translation vernachlässigbar ist.
 		%
 		\input{content/3_konzept/table/messmittel}
-		%
-		\subsubsection*{Translationsrichtung} \todo{umschreiben, Zeit erwähnen}
-			Durch die Tatsache das der Kreuztisch M\low{1} über keine \acrshort{ac:cnc}-Steuerung verfügt, können keine konstante statischen Bewegungen in der X/Y-Ebene gefahren werden. Es wird deshalb auf ein Freiheitsgrad verzichtet und nur eine Translation in Y-Richtung vorgesehen. 
-		%
-		\subsubsection*{Translationsgeschwindigkeit}
-			Die Translationsgeschwindigkeit ist abhängig vom Bediener des Kreuztisches. Es kann deshalb keine abschliessende Aussage über die Geschwindigkeit gemacht werden. Die subjektiv wahrgenommene Bewegung wird lediglich in die drei Stufen langsam, mittel und schnell eingestuft.
 	%
 	%
 	\subsection{Methoden}
@@ -391,58 +407,159 @@ Die Integration erfolgt wie bereits im Kapitel \vref{ch:grundlagen} im Abschnitt
 			%
 			\begin{itemize}
 				%
-				\item \textbf{Testgruppe} Die Testgruppe repräsentiert das \gls{g:myrio}, das zur Aufzeichnung der Beschleunigungsdaten benötigt wird. Dabei werden die Daten nur gespeichert und nicht verarbeitet\footnote{Für detailliertere Informationen zur Aufzeichnung sei auf den Abschnitt \vref{ss:rohdaten_aufzeichnen} verwiesen}. Die Signalverarbeitung erfolgt zu einem späteren Zeitpunkt auf einem Computer mit Hilfe von \gls{g:matlab}.
+				\item \textbf{Testgruppe} Die Testgruppe repräsentiert das \gls{g:myrio} M\low{1}, das zur Aufzeichnung der Beschleunigungsdaten benötigt wird. Dabei werden die Daten nur gespeichert und nicht verarbeitet\footnote{Für detailliertere Informationen zur Aufzeichnung sei auf den Abschnitt \vref{ss:rohdaten_aufzeichnen} verwiesen}. Die Signalverarbeitung erfolgt zu einem späteren Zeitpunkt auf einem Computer mit Hilfe von \gls{g:matlab}.
 				%
-				\item \textbf{Kontrollgruppe} Die zweite Gruppe stellt die direkte Messung mit der Kreuztischskala dar. Sie ist gleichzeitig die Kontrollgruppe, die schlussendlich bei der Interpretation als Ausgangslage gilt.
+				\item \textbf{Kontrollgruppe} Die zweite Gruppe stellt die direkte Messung mit dem Werkzeugtisch dar. Sie ist gleichzeitig die Kontrollgruppe, die schlussendlich bei der Interpretation als Ausgangslage gilt.
 			\end{itemize}
 			%
 			Die Messmethodik stellt bei den beschriebenen Gruppen die unabhängige Variabel dar.
 		%
-		\subsubsection*{Testbeschreibungen} \todo{erwartete gefahrenete Achse, Beschriftung Achse bei Bild}
-			Es werden mehrere unterschiedliche Messungen, die sich hinsichtlich Geschwindigkeit und Positionierung unterscheiden, durchgeführt. Dazu wird das \gls{g:myrio} unterschiedlich positioniert. Um die Anzahl Messungen in eine überschaubaren Rahmen zu halten, wird der Test auf 3 Positionen beschränkt. 
+		\subsubsection*{Testbeschreibungen}
+			Es werden mehrere unterschiedliche Messungen, die sich hinsichtlich Geschwindigkeit und Positionierung unterscheiden, durchgeführt. Dazu wird das \gls{g:myrio} M\low{1} unterschiedlich positioniert. Um die Anzahl Messungen in eine überschaubaren Rahmen zu halten, wird der Test auf 3 Positionen beschränkt. 
 			%
 			\begin{itemize}
-				\item \textbf{X-Achse Position} Das \gls{g:myrio} wird flach auf dem Kreuztisch angebracht. Dabei zeigt die X-Achse des Beschleunigungssensors nach unten, sprich gleichgerichtet wie der Gravitationsvektor. Relative Beschleunigungen erfolgen in der X/Y-Ebene in X-Richtung des Kreuztisches. Eine schematische Darstellung der Befestigung kann der Abbildung \vref{img:x_achse} entnommen werden.
-				\image{content/3_konzept/image/testaufbau_translation_position_x}{scale=0.8}{htbp}[X-Achsen Position][img:x_achse]
+				\item \textbf{x-Achse Position} Das \gls{g:myrio} M\low{1} wird flach auf dem Kreuztisch angebracht. Dabei zeigt die x-Achse des Beschleunigungssensors nach unten, sprich gleichgerichtet wie der Gravitationsvektor. Relative Beschleunigungen erfolgen in der x-y-Ebene in y-Richtung des Werkzeugtisches. Dies entspricht ebenfalls der y-Richtung (negativ) im Koordinatensystem des Betrachters, Abbildung \vref{img:koord_betrachter}. Eine schematische und reale Darstellung der Befestigung kann den Abbildungen \vref{img:x_achse} entnommen werden.
 				%
-				\item \textbf{Y-Achse Position} Bei der zweiten Position wird das \gls{g:myrio} so angebracht, das die Y-Achse des Beschleunigungssensors parallel zum Gravitationsvektor steht. Gemessene Beschleunigungen wirken sich somit nur auf die X- und Z-Achse aus. Die Abbildung \vref{img:y_achse} verdeutlicht diesen Aufbau.
-				\image{content/3_konzept/image/testaufbau_translation_position_y}{scale=0.8}{htbp}[Y-Achsen Position][img:y_achse]
+				\begin{figure}[htbp]
+					\centering
+					\begin{subfigure}[htbp]{0.49\textwidth}
+						\centering
+					     \includegraphics[height=3.7cm]{content/3_konzept/image/testaufbau_translation_position_x}
+					     \caption{schematisch}
+					     \label{img:x_schematisch}
+					\end{subfigure}%
+					\begin{subfigure}[htbp]{0.49\textwidth}
+						\centering
+					     \includegraphics[height=3.7cm]{content/3_konzept/image/testaufbau_translation_position_x_real}
+					     \caption{real}
+					     \label{img:x_real}
+					\end{subfigure}        
+					\caption{x-Achsen Position}
+					\label{img:x_achse}
+				\end{figure}    
 				%
-				\item \textbf{Z-Achse Position} Abschliessend erfolgt noch eine Positionierung mit der Z-Achse des Beschleunigungssensors in Richtung des Gravitationsvektors (gleichgerichtet). Aus dieser Konstellation ergeben sich nur Beschleunigungen auf die X- und Y-Achsen des Sensors. Die Befestigungsrichtung des \gls{g:myrio}s ist in der Abbildung \vref{img:z_achse} zu sehen.
-				\image{content/3_konzept/image/testaufbau_translation_position_z}{scale=0.8}{htbp}[Z-Achsen Position][img:z_achse]
+				\item \textbf{y-Achse Position} Bei der zweiten Position wird das \gls{g:myrio} so angebracht, das die y-Achse des Beschleunigungssensors parallel zum Gravitationsvektor steht. Gemessene Beschleunigungen wirken sich somit nur auf die x- und z-Achse aus. Die Abbildung \vref{img:y_achse} verdeutlicht diesen Aufbau. Die Translation wird in der y-Achse (positiv) erfolgen, bezogen auf das Koordinatensystem des Betrachters.
+				\begin{figure}[htbp]
+					\centering
+					\begin{subfigure}[htbp]{0.49\textwidth}
+						\centering
+						\includegraphics[height=3.7cm]{content/3_konzept/image/testaufbau_translation_position_y}
+						\caption{schematisch}
+						\label{img:y_schematisch}
+					\end{subfigure}%
+					\begin{subfigure}[htbp]{0.49\textwidth}
+						\centering
+						\includegraphics[height=3.7cm]{content/3_konzept/image/testaufbau_translation_position_y_real}
+						\caption{real}
+						\label{img:y_real}
+					\end{subfigure}        
+					\caption{y-Achsen Position}
+					\label{img:y_achse}
+				\end{figure}    
+				%
+				\item \textbf{z-Achse Position} Abschliessend erfolgt noch eine Positionierung mit der z-Achse des Beschleunigungssensors in Richtung des Gravitationsvektors (gleichgerichtet). Aus dieser Konstellation ergeben sich nur Beschleunigungen auf die x- und y-Achsen des Sensors, was eine negative Translation in negativer y-Richtung, bezogen auf das Koordinatensystem des Betrachters, zur Folge hat. Die Befestigungsrichtung des \gls{g:myrio}s M\low{1} ist in der Abbildung \vref{img:z_achse} zu sehen.
+				\begin{figure}[htbp]
+					\centering
+					\begin{subfigure}[htbp]{0.49\textwidth}
+						\centering
+						\includegraphics[height=3.7cm]{content/3_konzept/image/testaufbau_translation_position_z}
+						\caption{schematisch}
+						\label{img:z_schematisch}
+					\end{subfigure}%
+					\begin{subfigure}[htbp]{0.49\textwidth}
+						\centering
+						\includegraphics[height=3.7cm]{content/3_konzept/image/testaufbau_translation_position_z_real}
+						\caption{real}
+						\label{img:z_real}
+					\end{subfigure}        
+					\caption{z-Achsen Position}
+					\label{img:z_achse}
+				\end{figure}    
 			\end{itemize}\par 
 			%
-			Wie im vorherigen Abschnitt \vref{ss:material_translation} erörtert, kann die Translationgeschwindigkeit nicht messtechnisch bestimmt oder gemessen werden. Daher werden lediglich drei Bereiche definiert:
+			Die zu fahrende Distanz wird auf \unit[5]{cm} festgelegt. Dies entspricht dem festgelegten Messbereich, der in Abschnitt \vref{ss:messbereich} erläutert ist. Bedingt durch die manuelle Durchführung der Translation kann wird die Toleranz bei der Messung auf $pm$\unit[5]{cm} festgelegt.\par
+			%
+			Wie im vorherigen Abschnitt \vref{ss:material_translation} erörtert, wird die Geschwindigkeit in direkt über die Bewegungszeit gemessen. Daher werden lediglich zwei Bereiche definiert:
 			\begin{itemize}
-				\item \textbf{langsam} Die Translation ist nicht schneller als XXX\todo{Geschwindigkeit auf Wegzeit beziehen} in der Minute. Diese Vorgabe wird nur rudimentär mit einer Zeitmessung verifiziert.  
-				\item \textbf{mittel} Der Kreuztisch wird schneller als die Stufe langsam bewegt, jedoch langsamer als die folgende Stufe schnell.
-				\item \textbf{schnell} Maximale Geschwindigkeit, die mit dem Kreuztisch gefahren werden kann. Auf eine Kontrolle dieser Aussage wird verzichtet, da dies sehr bedienerabhänging ist.
+				\item \textbf{langsam} Die Translation dauert \unit[2]{s}. Diese Vorgabe wird nur rudimentär mit einer Zeitmessung verifiziert (Stoppuhr M\low{4}).  
+				%
+				\item \textbf{schnell} Eine Bewegungszeit von \unit[1]{s}.
 			\end{itemize}\par
 			%
-			Insgesamt ergeben sich durch die verschiedenen Positionierungen und Geschwindigkeiten 9 verschiedene Messungen.\par 
+			Insgesamt ergeben sich durch die verschiedenen Positionierungen und Geschwindigkeiten 6 verschiedene Messungen. Der Messablauf gliedert sich in 5 Schritte. Alle Schritte sind bei jeder Positionierung und Geschwindigkeit 15 mal zu wiederholen. 
 			%
-%			Für die Aufnahme der Messwerte kommen abhängig von der Messgruppe unterschiedliche Messmethodiken zum Einsatz:
-%			\begin{itemize}
-%				\item \textbf{Testgruppe}
-%				\item \textbf{Kontrollgruppe}
-%			\end{itemize}
-			Bei der Durchführungen müssen folgende Vorgaben eingehalten werden:
-			%
-			\begin{itemize}
-				\item Jede Messung ist 5 mal zu wiederholen (ergibt insgesamt 45 Messungen für dieses Protokoll)
-				\item Die Bedienung des Kreuztisches muss durch unterschiedliche Personen erfolgen
-				\item Die Translation beträgt immer \unit[100]{mm}
-				\item Die Raumtemperatur sollte \unit[25]{°C} betragen
-			\end{itemize}
+			\begin{enumerate}
+				\item Das \gls{g:myrio} M\low{1} wie vorgeben Positionieren.
+				\item Den Werkzeugtisch an die markierte Startposition bewegen
+				\item Das \gls{g:labview}-Programm starten.
+				\item Messung starten
+					\begin{enumerate}
+						\item \unit[4]{s} warten bis die Rotationswinkel geschätzt sind.
+						\item Translation durchführen (langsam oder schnell).
+						\item Warten bis \unit[10]{s} verstrichen sind (totale Messzeit).
+					\end{enumerate}
+				\item Werkzeugtisch in Ursprungsposition bewegen.
+			\end{enumerate}
+		%
+		\subsubsection*{Testgruppe Messmethodik}
+			Die Translation wird indirekt durch die auftretenden Beschleunigungen gemessen. Dazu werden die aufgezeichneten Daten in das \gls{g:matlab}-Skript \textit{XXX} eingelesen, wo mit Hilfe von mathematischen Operationen die Distanz bestimmt wird. Das Skript ist im Anhang \vref{s:anhang_matlab} zu finden.
 		%
 		\subsubsection*{Kontrollgruppe Messmethodik}
-			Die Aufnahme der Pfadlänge erfolgt direkt mit der Messskala am Kreuztisch. Die Skala hat eine Auflösung von XXX\todo{ergäntzen}, was eine sehr präzises Messer ermöglicht. Die Abbildung XXX zeigt die verwendet Messskala des Tisches.
-			\todo{Das Ablesen von der Skala -> Foto/Grafik}
+			Die Aufnahme der Pfadlänge erfolgt direkt mit dem Massstab M\low{2}. Die vergebene Distanz von \unit[5]{cm} wird dabei auf dem Schlitten der Drehbank M\low{3} vermerkt.
 		%
-		\subsubsection*{Datenauswertung}\todo{abhängige Variabel}
+		\subsubsection*{Datenauswertung}
+			Die relativ gemessene Distanz der Testgruppe muss bezogen auf die Kontrollgruppe ausgewertet werden. Die ermittelte Entfernung ist dabei die abhängige Variabel dieses Protokolls. Die Messresultate werden hinsichtlich der Messabweichung und ihrer Standardabweichung untersucht. Für die Auswertung irrelevanten Diagramme sei auf den Anhang \vref{ss:anhang_konzept_messung_translation} verwiesen.\par
+			%
+			\paragraph*{x-Achsen Position}
+				Über 15 Messungen mit der langsamen Geschwindigkeit tritt ein mittlere absoluter Fehler von \unit[0.44]{cm} auf, was ein relativ \unit[8.8]{\%} ergibt. Die gemessenen Translationen, zu sehen in der Abbildung \vref{img:x_tran_langsam_y}, weissten eine mittlere Distanz von \unit[-4.56]{cm} (blaue Linie) mit einer Standardabweichung (rote Linien) von \unit[0.477]{cm} auf.
+				\image{content/3_konzept/image/mittel_5_X_Y}{scale=0.6}{htbp}[x-Position Translation langsam][img:x_tran_langsam_y]
+				%
+				Wird die Geschwindigkeit verdoppelt auf Stufe schnell, so verbessert sich der mittlere absolute Fehler auf \unit[0.205]{cm}. Dies entspricht einer relativen Abweichung von \unit[4.1]{\%}. Daraus ergibt sich ein mittlere gemessene Distanz von \unit[-4.795]{cm} mit einer Standardabweichung von \unit[0.369]{cm}. Ersichtlich ist die Messung und die Auswertung in der Abbildung \vref{img:x_tran_schnell_y}.
+				%
+				\image{content/3_konzept/image/mittel_5_X_Y}{scale=0.6}{htbp}[x-Position Translation schnell][img:x_tran_schnell_y]
+%				\begin{figure}[htbp]
+%					\centering
+%					\begin{subfigure}[htbp]{0.8\textwidth}
+%						\centering
+%						\includegraphics[height=8cm]{content/3_konzept/image/mittel_5_X_Y}
+%						\caption{langsam}
+%						\label{img:x_tran_langsam_y}
+%						\vspace*{1.5ex}
+%					\end{subfigure}\\
+%					\begin{subfigure}[htbp]{0.8\textwidth}
+%						\centering
+%						\includegraphics[height=8cm]{content/3_konzept/image/schnell_5_X_Y}
+%						\caption{schnell}
+%						\label{img:x_tran_schnell_y}
+%					\end{subfigure}        
+%					\caption{x-Position Translation y-Richtung}
+%					\label{img:x_tran_schnell}
+%				\end{figure}    
+			%
+			\paragraph*{y-Achsen Position}
+				Befindet sich das \gls{g:myrio} in der y-Achsen Position, so ergibt sich über 15 Messungen ein mittlerer absoluter Fehler von \unit[1.338]{cm} (relativ \unit[26.8]{\%}). Dies bei der Geschwindigkeit langsam. Die Analyse hinsichtlich des gemessenen Mittelwertes und Standardabweichung ergibt \unit[6.338]{cm} und \unit[1.355]{cm}. Die Abbildung \vref{img:y_tran_langsam_y} zeigt die 15 Messungen mit eingezeichneten Kenngrössen (blau Mittelwert der Messung und rot die Standardabweichung).
+				%
+				\image{content/3_konzept/image/mittel_5_Y_Y}{scale=0.6}{htbp}[y-Position Translation langsam][img:y_tran_langsam_y]
+				%
+				Ein Erhöhung der Geschwindigkeit bringt einen mittleren absoluten Messfehler von \unit[1.360]{cm} und ein relativen von \unit[27.2]{\%} zu Tage. Dies bei einem ermittelten Mittelwert von \unit[6.360]{cm} und einer Standardabweichung von \unit[0.697]{cm}, wie die Abbildung \vref{img:y_tran_schnell_y}.
+				%
+				\image{content/3_konzept/image/schnell_5_Y_Y}{scale=0.6}{htbp}[y-Position Translation schnell][img:y_tran_schnell_y]
+			%
+			\paragraph*{z-Achsen Position}
+				Die abschliessende Messung in der z-Achsen Position ergibt bei der langsamen Geschwindigkeit einen absoluten mittleren Fehler von \unit[2.043]{cm}, was einem relativen Fehler von \unit[40.9]{\%} entspricht. Betrachtet man die Abbildung \vref{img:z_tran_langsam_y}, so zeigt sich bei der blauen Linie ein Mittelwert von \unit[-2.957]{cm} bei einer Standardabweichung von \unit[0.323]{cm}.
+				%
+				\image{content/3_konzept/image/mittel_5_Z_Y}{scale=0.6}{htbp}[z-Position Translation y-Richtung langsam][img:z_tran_langsam_y]
+				%
+				Bei der Geschwindigkeit schnell erhöht sich wiederum der absolute Fehler auf \unit[0.769]{cm} (entspricht relativ \unit[15.4]{\%}). Die Messung an sich hat einen Mittelwert von \unit[-4.231]{cm} bei einer Standardabweichung von \unit[0.255]{cm}. Die Abbildung \vref{img:z_tran_schnell_y} zeigt das gemessene Ergebnis.\par 
+				%
+				\image{content/3_konzept/image/schnell_5_Z_Y}{scale=0.6}{htbp}[z-Position Translation schnell][img:z_tran_schnell_y]
+			%
+			Die Messerergebnisse zusammengefasst sind in der Tabelle XXX dargestellt. Darauf basierend erfolgt nun im folgenden Abschnitt \vref{ss:interpretation_tran} die Interpretation und Diskussion.
+			%
+			\input{content/3_konzept/table/auswertung_tran}	 
 	%
 	%
-	\subsection{Interpretation}\todo{Histogramm, Gruppenvergleich,Messfehler}
+	\subsection{Interpretation}\label{ss:interpretation_tran}\todo{Histogramm, Gruppenvergleich,Messfehler}
 %
 %
 %Verifikation Translation und Rotation überlagert
