add changes konzept, add anatomie knie

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -249,3 +249,24 @@
   year = {2014},
   keywords = {lit},
 }
+
+@BOOK{lit:knie2,
+  title = {Funktionelle Anatomie - Grundlagen sportlicher Leistung und Bewegung},
+  publisher = {Springer},
+  year = {2008},
+  author = {Hans-Joachim Appell},
+  edition = {4},
+  month = {},
+  ISBN = {978-3-540-74864-9},
+  keywords = {lit},
+}
+
+
+@ONLINE{img:knie,
+  url = {http://www.fachaerztezentrum.ch/Knie.htm},
+  title = {Knie },
+  author = {FachaertzteZentrum,
+  urldate = {2014-06-20},
+  year = {2014},
+  keywords = {pic},
+}
