--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -21,7 +21,7 @@ Dank der \acrshort{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmend
 %
 Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren ist die Genauigkeit der Messung. Bereits ein kleiner Fehler in der Messung der Beschleunigung resultiert in einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor einen Drift sowie Offset aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (einigen Sekunden) zu realisieren. Auch ist die Platzierung und Befestigung des Sensors eine schwere Aufgabe. Durch die Masse des Sensors schwingt der Sensor zusätzlich bei jeder Bewegung mit und verfälscht somit die Messung.\par		
 %
-\section{Zweck, Ziel, Intention und Notwendigkeit der Untersuchung}
+\section{Zweck, Ziel, Intention und Notwendigkeit der Untersuchung}\label{sec:zweck}
 Der Zeitpunkt des Wiedereinstieges in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren um den Trainingsrückstand aufzuholen und den getätigten Aufbau nicht weiter zu verlieren. Zum andern sollte jedoch die Verletzung bestmöglich geheilt sein um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
 %
 An der \gls{ac:EHSM} wird dazu ein Test geleitet durch einen Physiotherapeuten am verletzen Sportler durchgeführt. Der Test dienen zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der \gls{ac:EHSM} mehreren Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während den Übungen. Die Auslenkung des Knies in der \gls{g:transversalebene} des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist ersichtlich ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten. Er entschiedet ob der Sportler das Training wieder aufnehmen darf oder noch pausieren soll.\par
@@ -123,6 +123,9 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 	%
 	\subsection{Messgenauigkeit}\label{ss:messgenauigkeit}
 		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden}.
-				
+%
+%
+\section{Angrenzende Projekte}
+Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \gls{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit den in Abschnitt \vref{sec:zweck} beschriebenem Ziel entwickelt werden. Im Projekt dieser Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
 	
 
