--- a/content/2_grundlagen/grundlagen.tex
+++ b/content/2_grundlagen/grundlagen.tex
@@ -14,15 +14,21 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Grundlagen}\label{ch:grundlagen}
 %
-%
-% Funktion des Kreuzbandes
-\section{Funktion des Kreuzbandes}\label{s:funktion_kreuzband}
-Das Kreuzband hat im Knie als erste Funktion, die Bewegungsfähigkeit des Kniegelenkes zu beschränken. Somit kann das Knie nicht überstreckt oder beliebig gebeugt werden. Die zweite Funktion ist die Stabilisierung der Verbindung zwischen Ober- und Unterschenkel. Genau diese Stabilität ist bei einem verletzen Kreuzband nicht mehr gewährleistet, was sich bei Belastung mit einer schrägen Auslenkung des Knies bemerkbar macht. \par
-Das Kreuzband wird in Sportarten in welchen grosse Belastungen des Knies mit Tätigkeiten wie Rennen, Springen oder stop \& go-Sportarten wie Unihockey oder Fussball geschehen, besonders belastet. Eine Gute Rehabilitation des Verletzen Sportlers ist besonders wichtig. Studien in den USA bei professionellen Football-Spielern haben gezeigt, dass die Karriere von Sportlern mit mehrfachem Kreuzbandriss im Durchschnitt kürzer ist als solche von Sportlern mit nur einfachem oder keinem Kreuzbandriss. Aus diesem Grund sollte ein möglichst grossen Wert auf den richtig getimten Wiedereinstieg ins Training gelegt werden \cite{lit:knie}.
+
 %
 % Anatomie des Knies
 \subsection*{Anatomie des Knies}
-
+Das Kniegelenk ist eines der grössten und komplexesten Gelenke im Körper. Das Knie ist die Verbindung zwischen Ober- und Unterschenkel. An diesem Gelenk sind somit diese beiden Knochen sowie die Kniescheibe angebracht. Die Kniescheibe schützt das Gelenk von vorne. Die Funktion des Gelenks kann als Art Drehscharnier verstanden werden. Der medizinische Begriff ist Dreh-Winkelgelenk. Dieser Gelenktyp erlaubt eine sehr grosse Beweglichkeit und unterstützt sowohl Scharnier- wie auch Rotationsbewegungen. Das Gelenk besitzt zwei Freiheitsgarde. Die Bewegung des Kniegelenks findet also in zwei Ebenen statt, diese sind die \gls{g:sagitalebene} sowie die \gls{g:transversalebene}. Die meisten Bewegungen kommen in der \gls{g:sagitalebene} vor. Das Kniegelenk ist in zwei Gelenke unterteilt. Eines verbindet Oberschenkel und Schienbein, ein weiteres Oberschenkel und Kniescheibe.  Das Wadenbein ist nicht am Gelenk beteiligt. \par 
+%
+\image{content/2_grundlagen/image/anatomie_Knie}{scale=0.6}{htbp}[Aufbau des Kniegelenkes \cite{img:knie}][Trapeznäherung][img:trapez]
+%
+Zwei Bandsysteme sichern die Stabilität des Kniegelenkes und führen die Bewegung des Kniegelenkes. Dies sind zum einen zwei Seitenbänder (Aussen- und Innenband), die an der Seite des Knies angebracht sind und zum andern die Kreuzbänder. Die Seitenbänder sichern das gestreckte Gelenk und lassen in diesem Fall keine Rotationsbewegung zu. Die Kreuzbänder hingegen halten das Gelenk zusammen und sorgen für die Stabilität falls das Knie gebeugt ist \cite{lit:knie2}. 
+%
+% Funktion des Kreuzbandes
+\section{Kreuzbandriss}\label{s:funktion_kreuzband}
+Das Kreuzband hat im Knie als erste Funktion, die Bewegungsfähigkeit des Kniegelenkes zu beschränken. Somit kann das Knie nicht überstreckt oder beliebig gebeugt werden. Die zweite Funktion ist die Stabilisierung der Verbindung zwischen Ober- und Unterschenkel. Genau diese Stabilität ist bei einem verletzen Kreuzband nicht mehr gewährleistet, was sich bei Belastung mit einer schrägen Auslenkung des Knies bemerkbar macht. \par
+%
+Das Kreuzband wird in Sportarten in welchen grosse Belastungen des Knies mit Tätigkeiten wie Rennen, Springen oder allgemein in stop \& go-Sportarten wie Unihockey oder Fussball besonders belastet. Eine Gute Rehabilitation des Verletzen Sportlers ist besonders wichtig. Studien der USA in der professionellen Football-Liga haben gezeigt, dass die Karriere von Sportlern mit mehrfachem Kreuzbandriss im Durchschnitt kürzer ist als solche von Sportlern mit nur einfachem oder keinem Kreuzbandriss. Aus diesem Grund sollte ein möglichst grossen Wert auf den richtig getimten Wiedereinstieg ins Training gelegt werden. Somit können Folgeschäden am Kreuzband und darauffolgende Beeinträchtigungen der Karriere des Sportlers vermindert werden \cite{lit:knie}.
 %
 %
 %LabVIEW auf NI myRIO
