--- a/glossary.tex
+++ b/glossary.tex
@@ -25,8 +25,18 @@
 % Magnetometer
 \newglossaryentry{g:magnetometer}{name=Magnetometer, description={Sensor zum Messen von magnetischen Flussdichten}}
 %
+% Sagitalebene
+\newglossaryentry{g:sagitalebene}{name=Sagitalebene, description={Ebene in der Medizin. Erstreckt sich von vorne nach hinten und von oben nach unten. Sie steht senkrecht auf der Transversalebene. \cite{lit:transversal}}}
+%
 % Transversalebene
 \newglossaryentry{g:transversalebene}{name=Transversalebene, description={Ebene in der Medizin. Erstreckt sich von links nach rechts und von vorne nach hinten. Sie steht senkrecht auf der Längsachse des menschlichen Körpers. \cite{lit:transversal}}}
+%
+% sagital
+\newglossaryentry{g:sagital}{name=sagital,description={Bewegung in der Sagitalebene, vorne nach hinten umgekehrt}}
+%
+% transversal
+\newglossaryentry{g:transversal}{name=transversal,description={Bewegung in der Transversalebene, rechts nach links umgekehrt}}
+
 %
 % LabVIEW
 \newglossaryentry{g:labview}{name=LabVIEW, description={System Design Software von der Firma \acrfull{ac:ni}}}
@@ -38,8 +48,9 @@
 %
 % MATLAB
 \newglossaryentry{g:matlab}{name=MATLAB, description={Software von \href{http://www.mathworks.ch/}{The MathWorks} speziel ausgelegt zum Lösen mathematischer Problemstellungen}}
+%
 % stationäres Signal
 \newglossaryentry{g:stationaer}{name=stationär, description={Ein Signal wird als stationär bezeichnet, wenn seine Signalkenngrössen nicht abhängig von der Zeit sind}}
+%
+% Gradientenverfahren
 \newglossaryentry{g:gradientenvefahren}{name=Gradientenvefahren, description={Verfahren bei Optimierungen. Dabei wird der  angenäherter Wert stets in die Richtung des negativen Gradienten korrigiert (Methode des steilsten Abstieges)}}
-\newglossaryentry{g:sagital}{name=sagital,description={Bewegung in der Sagitalebene, vorne nach hinten umgekehrt}}
-\newglossaryentry{g:transversal}{name=transversal,description={Bewegung in der Transversalebene, rechts nach links umgekehrt}}
