--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -16,23 +16,35 @@
 %
 % Blockdiagramm
 \section{Algoritmus}\label{s:blockdiagramm}
-Das Konzept kann teilweise aus dem später beschriebenen Beispielprojekt in Abschnitt \vref{subsec:myposture} extrahiert werden. Dort wurden eine ähnliche Aufgabenstellung gelöst. Nach der Literaturstudie und der Absprache mit den Betreuern haben wir uns entschieden die Methode mit der doppelten Integration der Beschleunigung der Bewegung umzusetzen, wie in der Literaturstudie in \cite{lit:doubleint} gesehen.\par
+Das Konzept kann teilweise aus dem später beschriebenen Beispielprojekt in Abschnitt \vref{subsec:myposture} extrahiert werden. Dort wurden eine ähnliche Aufgabenstellung gelöst. Nach der Literaturstudie und der Absprache mit den Betreuern haben sich die Autoren entschieden, die Methode mit der doppelten Integration der Beschleunigung der Bewegung umzusetzen wie in der Literaturstudie in \cite{lit:doubleint} gesehen.\par
 %
-Die Beschleunigung der Bewegung wird von einem auf dem Knie montierten drei Achsen Beschleunigungssensor aufgezeichnet. Da der Sensor beliebig im Raum platziert ist, enthalten die aufgezeichneten Beschleunigungsdaten zum einen die Erdbeschleunigung zum andern die Bewegungsbeschleunigung. In unserem Falle ist nur die Beschleunigung der Bewegung von Interesse. Somit muss die Erdbeschleunigung detektiert und diese von der Bewegungsbeschleunigung getrennt werden. Dies erreicht man durch die Kompensation der Orientierung des Sensors. Die statische Erdbeschleunigung kann dafür gebraucht werden. Diese zeigt stets in Richtung der z-Achse unseres Koordinatensystem des Betrachters.  Die zu detektierende Bewegung wir nur in einer Ebene betrachtet. In diesem Falle in der x-y-Ebene. Senkrecht zu dieser Ebene steht die statische Erdbeschleunigung. Die Beschleunigungskomponenten der x- und y-Achse sind noch zweimal zu integrieren, um auf die Bewegung schliessen zu können. Das Blockdiagramm des Konzeptes ist in Abbildung \vref{img:blockdiagramm} ersichtlich. Auf die einzelnen Blöcke soll in den folgenden Unterkapiteln näher eingegangen werden.
+Die Beschleunigung der Bewegung wird von einem auf dem Knie montierten drei Achsen Beschleunigungssensor aufgezeichnet. Da der Sensor beliebig im Raum platziert ist, enthalten die aufgezeichneten Beschleunigungsdaten zum einen die Erdbeschleunigung zum andern die Bewegungsbeschleunigung. In unserem Falle ist nur die Beschleunigung der Bewegung von Interesse. Somit muss die Erdbeschleunigung detektiert und diese von der Bewegungsbeschleunigung getrennt werden. Dies erreicht man durch die Kompensation der Orientierung des Sensors. Dafür wird die statische Erdbeschleunigung ausgenutzt. Diese zeigt stets in Richtung der z-Achse unseres Koordinatensystem des Betrachters (Achnitt \vref{subsub:betrachter} sind diese Koordinatensysteme kurz erklärt). Die zu detektierende Bewegung welche einer seitlichen Auslenkung des Knies entspricht, wir zur Vereinfachung nur in einer Ebene betrachtet. In diesem Falle in der x-y-Ebene. Senkrecht zu dieser Ebene steht die statische Erdbeschleunigung. Die Beschleunigungskomponenten der x- und y-Achse sind noch zweimal zu integrieren, um auf die Bewegung schliessen zu können.\\
+Zu Beginn jeder Messung wird der Beschleunigungssensor eine bestimmte Zeit nicht bewegt. In dieser Zeit wird die Orientierung des Beschleunigungssensors bestimmt, womit anschliessend diese kompensiert werden kann. Anschliessend wird die Orientierung des Sensors Kompensiert und die Bewegung berechnet.\par
+%
+Der Algorithmus kann somit in zwei Teile aufgeteilt werden. Der erste Teil wird während den Zeit in der der Sensor nicht bewegt wird abgearbeitet. Der zweite Teil benötigt die geschätzte Orientierung zur Transformation des Sensors in das Bezugssystem des Betrachters und berechnet anschliessend der zurückgelegte Weg des Sensors.
+
+\begin{itemize}
+\item Schätzen der Orientierung des Sensors
+\item Kompensation der Orientierung und Berechnung der Position
+\end{itemize}
+
+\par 
+%
+Das Blockdiagramm des Konzeptes ist in Abbildung \vref{img:blockdiagramm} ersichtlich. Auf die einzelnen Blöcke soll in den folgenden Unterkapiteln näher eingegangen werden.
 %
 % Blockdiagramm
-\image{content/3_konzept/image/Blockdiagramm_Konzept}{scale=0.9,angle=90}{htbp}[Blockdiagramm Konzept][img:blockdiagramm]
+\image{content/3_konzept/image/Blockdiagramm_Konzept}{scale=0.9}{htbp}[Blockdiagramm Konzept][img:blockdiagramm]
 \todo{Bildposition, Grösse besser, Bild ändern}
 %
 % Filterung
 \subsection{Tiefpass-Filterung}
-Die aufgenommenen Beschleunigungsdaten werden aufgetrennt in die Erdbeschleunigung und die Beschleunigung der Bewegung. Die Erdbeschleunigung ermöglicht das Schätzen der Orientierung wie dies in Abschnitt \vref{subsec:orientierungsschätzung} genauer erklärt ist. \par
+Die aufgenommenen Beschleunigungsdaten werden aufgetrennt in die Erdbeschleunigung und die Beschleunigung der Bewegung. Die Erdbeschleunigung ermöglicht das Schätzen der Orientierung wie dies in Abschnitt \vref{subsec:orientierungsschätzung} genauer erklärt ist.\par
 %
-Die Erdbeschleunigung ist in jedem Falle eine konstante Beschleunigung. Aus diesem Grund kann diese Beschleunigung als eine reine DC-Komponente betrachtet werden. Mit einer Tiefpass-Filterung wird somit einfach die Erdbeschleunigung von der Beschleunigung der Bewegung getrennt. Als Tiefpassfilter wurde ein \todo{Überprüfen ob Filterwahl gut} \gls{ac:fir}-Filter gewählt. 
+Die Erdbeschleunigung ist in jedem Falle eine konstante Beschleunigung. Aus diesem Grund kann diese Beschleunigung als eine reine DC-Komponente betrachtet werden. Mit einer Tiefpass-Filterung kann somit die Erdbeschleunigung von der Beschleunigung der Bewegung getrennt werden. Als Tiefpassfilter wurde ein \gls{ac:fir}-Filter gewählt.  Dies aus dem Grund, da das \gls{ac:fir}-Filter eine lineare Phase hat.
 %
 % Filterentwurf
 \subsubsection*{Filterentwurf}
-Das verwendete \gls{ac:fir}-Filter hat, wie der Name schon aussagt eine endliche Impulsantwort und ist somit gezwungen stabil. Der Phasengang dieser Filter ist linear. Die Gruppenlaufzeit entspricht der Zeit, durch die das Eingangssignal eines \gls{ac:lti}-Systems verzögert wird. Diese ist durch die lineare Phase bei einem \gls{ac:fir}-Filter konstant. Das Eingangssignal ist also am Ausgang nur verzögert und nicht verzerrt.\cite{lit:vongruenigen}\par
+Das verwendete \gls{ac:fir}-Filter hat, wie der Name schon aussagt eine endliche Impulsantwort und ist somit gezwungen stabil. Der Phasengang dieser Filter ist linear. Die Gruppenlaufzeit entspricht der Zeit, durch die das Eingangssignal eines \gls{ac:lti}-Systems verzögert wird. Diese ist durch die lineare Phase bei einem \gls{ac:fir}-Filter für alle Frequenzanteile konstant. Das Eingangssignal ist also am Ausgang nur verzögert und nicht verzerrt.\cite{lit:vongruenigen}\par
 %
 Zum Entwurf des Filters müssen zuerst einige Spezifikationen des Filters festgelegt werden. Diese sind in der Abbildung \vref{img:spezfilter} ersichtlich und sind:
 %
@@ -70,14 +82,15 @@ w & Fensterfunktion
 %
 % Schätzung der Orientierung
 \subsection{Schätzung der Orientierung}\label{subsec:orientierungsschätzung}
-Um die Bewegung des Sensors im Koordinatensystem des Betrachters darstellen zu können, muss die Orientierung des Sensors bekannt sein. Als Bezugssystem dient die Erde, bei welcher die z-Achse des Koordinatensystems parallel zur Erdbeschleunigung liegt. Mit dem Gravitätsvektor $\overrightarrow{a_g}$ und der gemessenen Erdbeschleunigung des Sensors $\overrightarrow{a_{sens}}$ kann mit einfachen, grundlegenden Vektoroperationen auf den Drehwinkel $\Phi$ sowie auf die Richtung der Rotationsachse $\overrightarrow{n}$ zwischen den beiden Vektoren geschlossen werden. Dies ist in Abbildung \vref{img:Vektor} illustriert. Mit dem Drehwinkel $\Phi$ und der Rotationsachse $\overrightarrow{n}$ kann die im Kapitel \vref{ch:grundlagen} in Abschnitt \vref{sub:rot} beschriebene Rotationsmatrix aufgestellt werden.  
+Um die Bewegung des Sensors im Koordinatensystem des Betrachters darstellen zu können, muss die Orientierung des Sensors bekannt sein. Als Bezugssystem dient die Erde, bei welcher die z-Achse des Koordinatensystems parallel zur Erdbeschleunigung liegt. Zur Übersicht ist eine mögliche Darstellung der Vektoren in Abbildung \vref{img:Vektor} ersichtlich. Mit dem Gravitätsvektor $\overrightarrow{a_g}$ und der berechneten Erdbeschleunigung des Sensors $\overrightarrow{a_{grav}}$ kann mit einfachen, grundlegenden Vektoroperationen auf den Drehwinkel $\Phi$ sowie auf die Rotationsachse $\overrightarrow{n}$ zwischen den beiden Vektoren geschlossen werden.\par
+%
+Die berechnete Erdbeschleunigung des Sensors entsprechen den \gls{ac:tp}-gefilterten Beschleunigungsdaten. Mit dem Drehwinkel $\Phi$ und der Rotationsachse $\overrightarrow{n}$ kann die im Kapitel \vref{ch:grundlagen} in Abschnitt \vref{sub:rot} beschriebene Rotationsmatrix aufgestellt werden. Mit dieser Rotationsmatrix kann die Orientierung des Beschleunigungssensors in das Betrachtungssystem transformiert werden. Der Drehwinkel $\Phi$ ist der Zwischenwinkel der Vektoren $\overrightarrow{a_g}$ und $\overrightarrow{a_{grav}}$, die Rotationsachse $\overrightarrow{n}$ steht senkrecht auf diesen beiden Vektoren.
 %
 \image{content/3_konzept/image/Vektor_bearb}{scale=0.7}{htbp}[Rotation][img:Vektor]
-
 %
-\subsubsection*{Betrachtungssystem}
-Um die Orientierung des Sensors zu kompensieren, ist zum Überblick in Abbildung \vref{img:koordinatensystem} das Koordinatensystem des Betrachters sowie das Koordinatensystem des myRIO 1900 aufgezeigt. Das Koordinatensystem des Betrachters liegt mit der z-Achse parallel zur Erdbeschleunigung. Bei frontaler Betrachtung resultieren \gls{g:transversal}e Bewegungen nach links und rechts durch eine Abnahme bzw. Zunahme der y-Komponente. Hingegen bewirken \gls{g:sagital}e Bewegungen nach vorne und hinten eine Zu- bzw. Abnahme der x-Komponente.
-
+\subsubsection*{Betrachtungssystem}\label{subsub:betrachter}
+Um die Orientierung des Sensors zu kompensieren, ist zum Überblick in Abbildung \vref{img:koordinatensystem} das Koordinatensystem des Betrachters sowie das Koordinatensystem des myRIO 1900 aufgezeigt. Das Koordinatensystem des Betrachters liegt mit der z-Achse parallel zur Erdbeschleunigung. Bei frontaler Betrachtung resultieren \gls{g:transversal}e Bewegungen nach links und rechts zu eine Abnahme bzw. Zunahme der y-Komponente. Hingegen bewirken \gls{g:sagital}e Bewegungen nach vorne und hinten eine Zu- bzw. Abnahme der x-Komponente.
+%
 \begin{figure}[htbp]
         \centering
         \begin{subfigure}[htbp]{0.3\textwidth}
@@ -94,35 +107,37 @@ Um die Orientierung des Sensors zu kompensieren, ist zum Überblick in Abbildung 
         \caption{Koordinatensystem}\label{img:koordinatensystem}
 \end{figure}    
 %
-Das myRIO 1900 hat eine beliebige Ausrichtung im Raum. Durch die Montage des Beschleunigungssensors sind die Achsen wie in Abbildung \vref{img:koord_myRIO} ersichtlich gegeben.
+Das myRIO 1900 hat bekanntlich eine beliebige Ausrichtung im Raum resp. im Koordinatensystem des Betrachters. Durch die Montage des Beschleunigungssensors sind dessen Achsen in Bezug auf das Gehäuse gegeben. Diese sind in Abbildung \vref{img:koord_myRIO} ersichtlich.
 %
 \subsubsection*{Drehwinkel}
-Der Drehwinkel wie in Abbildung \vref{img:Vektor} gesehen entspricht gerade dem Zwischenwinkel der beiden Vektoren $\overrightarrow{a\low{g}}$ sowie den Beschleunigungsdaten $\overrightarrow{a\low{sens}}$. Der Zwischenwinkel zweier Vektoren wird über das Skalarprodukt berechnet. Nach Papula \cite{lit:papula} ist dies wie in Gleichung \vref{eq:dotp} dargestellt möglich.
+Der Drehwinkel $\Phi$ wie in Abbildung \vref{img:Vektor} gesehen entspricht gerade dem Zwischenwinkel der beiden Vektoren $\overrightarrow{a\low{g}}$ sowie den \gls{ac:tp}-gefilterten Beschleunigungsdaten $\overrightarrow{a\low{grav}}$. Der Zwischenwinkel zweier Vektoren wird über das Skalarprodukt berechnet. Nach Papula \cite{lit:papula} ist dies wie in Gleichung \vref{eq:dotp} dargestellt möglich.
 %
 \formula{
-\overrightarrow{a\low{g}}*\overrightarrow{a\low{sens}} = \mid \overrightarrow{a\low{g}}\mid *\mid \overrightarrow{a\low{sens}}\mid *\cos(\phi)\\
+\overrightarrow{a\low{g}}*\overrightarrow{a\low{grav}} = \mid \overrightarrow{a\low{g}}\mid *\mid \overrightarrow{a\low{grav}}\mid *\cos(\phi)\\
 \\
-\phi=\arccos\left(\frac{\overrightarrow{a\low{g}}*\overrightarrow{a\low{sens}}}{ \mid \overrightarrow{a\low{g}}\mid *\mid \overrightarrow{a\low{sens}}\mid}\right)
+\phi=\arccos\left(\frac{\overrightarrow{a\low{g}}*\overrightarrow{a\low{grav}}}{ \mid \overrightarrow{a\low{g}}\mid *\mid \overrightarrow{a\low{grav}}\mid}\right)
 }{
 \phi & Zwischenwinkel der beiden Vektoren\\
 \overrightarrow{a\low{g}} & Gravitätsvektor\\
-\overrightarrow{a\low{sens}} & gemessene Erdbeschleunigung
+\overrightarrow{a\low{grav}} & gemessene Erdbeschleunigung
 }[eq:dotp]
 %
 \subsubsection*{Rotationsachse}
-Die Rotationsachse benötigt man, um eine Bezugsachse für die Drehung des Koordinatensystems des Sensors in das Koordinatensystems des Betrachters vorzunehmen. Die Rotationsachse muss somit senkrecht auf dem von den beiden bekannten Vektoren, dem Gravitätsvektor $\overrightarrow{a\low{g}}$ und dem vom Beschleunigungssensor aufgenommenem Vektor $\overrightarrow{a\low{sens}}$ in welchem die Erdbeschleunigung auf die verschiedenen Komponenten verteilt ist, stehen. Dazu dient das Vektorprodukt, auch Kreuzprodukt genannt als Hilfsmittel. Das Vektorprodukt zweier Vektoren berechnet den Vektor, welcher senkrecht auf die von den beiden Vektoren aufgespannten Ebene steht. Die Länge auch Norm oder Betrag dieses Vektors entspricht der von den beiden Vektoren aufgespannten Fläche. Wird der erhaltene Vektor zusätzlich normiert, so hat dieser die Länge Eins. Die Rotationsachse $\overrightarrow{n}$ wird wie in Gleichung \ref{eq:cross} berechnet.
+Die Rotationsachse benötigt man, um eine Bezugsachse für die Drehung des Koordinatensystems des Sensors in das Koordinatensystems des Betrachters vorzunehmen. Die Rotationsachse muss somit senkrecht auf dem von den beiden bekannten Vektoren, dem Gravitätsvektor $\overrightarrow{a\low{g}}$ und dem vom Beschleunigungssensor aufgenommenem Vektor $\overrightarrow{a\low{grav}}$ in welchem die Erdbeschleunigung auf die verschiedenen Komponenten verteilt ist, stehen. Dazu dient das Vektorprodukt, auch Kreuzprodukt genannt als Hilfsmittel. Das Vektorprodukt zweier Vektoren berechnet den Vektor, welcher senkrecht auf die von den beiden Vektoren aufgespannten Ebene steht. Die Länge auch Norm oder Betrag dieses Vektors entspricht der von den beiden Vektoren aufgespannten Fläche sowie natürlich der Länge des Vektors. Wird der erhaltene Vektor zusätzlich normiert, so hat dieser die Länge Eins. Die Rotationsachse $\overrightarrow{n}$ wird wie in Gleichung \ref{eq:cross} berechnet.
 %
 \formula{
-\overrightarrow{n} = \frac{\overrightarrow{a\low{g}} \times\overrightarrow{a\low{sens}}}{ \mid \overrightarrow{a\low{g}} \times \overrightarrow{a\low{sens}}\mid}
+\overrightarrow{n} = \frac{\overrightarrow{a\low{g}} \times\overrightarrow{a\low{grav}}}{ \mid \overrightarrow{a\low{g}} \times \overrightarrow{a\low{grav}}\mid}
 }{
 \overrightarrow{n} & Richtung der Rotationsachse\\
 \overrightarrow{a\low{g}} & Gravitätsvektor\\
-\overrightarrow{a\low{sens}} & gemessene Erdbeschleunigung
+\overrightarrow{a\low{grav}} & gemessene Erdbeschleunigung
 }[eq:cross]
 %
 % Verzögerung
 \subsection{Berechnung der Bewegungsbeschleunigung} \todo{anpassen, Verzögerung erwähnen beschreiben}
-Um die Beschleunigung der Bewegung zu erhalten, können mehrere Ansätze verfolgt werden. Zum einen kann die berechnete Erdbeschleunigung am Sensor von der gemessenen Beschleunigung am Sensor subtrahiert werden. Die gemessene Beschleunigung am Sensor beinhaltet bekanntlich die Erdbeschleunigung sowie die benötigte Beschleunigung der Bewegung. Ein weiterer Ansatz ist auf die gemessenen Beschleunigungsdaten zusätzliche eine Hochpassfilterung anzuwenden. Hiermit wird gerade das Gegenteil zur Tiefpassfilterung erreicht. Mit der Hochpassfilterung werden die Beschleunigungsdaten von der Erdbeschleunigung gekapselt. Die Komponenten der Bewegungsbeschleunigung können somit mit einem Hochpass mit tief angelegter Durchlassfrequenz ermittelt werden. Da sich die Autoren nach Absprache mit den Betreuern nur auf die Bewegung in einer Ebene beschränken ist es ausreichen nur eine Rotation in das Betrachtungssystem vorzunehmen. Dabei ist die Bewegung auf der x- und y-Achse auszuwerten. Auf der z-Achse ist die Erdbeschleunigung vorhanden. \par
+Um die Beschleunigung der Bewegung zu erhalten, können mehrere Ansätze verfolgt werden. Zum einen kann die berechnete Erdbeschleunigung am Sensor von der gemessenen Beschleunigung am Sensor subtrahiert werden. Die gemessene Beschleunigung am Sensor beinhaltet bekanntlich die Erdbeschleunigung sowie die benötigte Beschleunigung der Bewegung. Ein weiterer Ansatz ist auf die gemessenen Beschleunigungsdaten zusätzlich eine Hochpassfilterung anzuwenden. Hiermit wird gerade das Gegenteil zur Tiefpassfilterung erreicht. Mit der Hochpassfilterung werden die Beschleunigungsdaten von der Erdbeschleunigung gekapselt. Die Komponenten der Bewegungsbeschleunigung können somit mit einem Hochpass mit tief angelegter Durchlassfrequenz ermittelt werden.\par 
+%
+Da sich die Autoren nach Absprache mit den Betreuern nur auf die Bewegung in einer Ebene beschränken ist es ausreichen nur eine Rotation in das Betrachtungssystem vorzunehmen. Dabei ist die Bewegung auf der x- und y-Achse auszuwerten. Auf der z-Achse ist die Erdbeschleunigung vorhanden. Die \par
 %
 Jede Filterung hat eine Verzögerung des Signals zur Folge. Diese Verzögerung verhält sich nach den Notizen in der Vorlesung Digitale Signalverarbeitung (BTE5034 DIGSV) bei Herrn Rolf Vetter wie in Gleichung \vref{eq:delay} aufgezeigt.
 %
