FIX add missed bracket

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -264,8 +264,8 @@
 
 @ONLINE{img:knie,
   url = {http://www.fachaerztezentrum.ch/Knie.htm},
-  title = {Knie },
-  author = {FachaertzteZentrum,
+  title = {Knie},
+  author = {FachaertzteZentrum},
   urldate = {2014-06-20},
   year = {2014},
   keywords = {pic},
